--- a/lib/components/footer/footer.module.css
+++ b/lib/components/footer/footer.module.css
@@ -1,17 +1,13 @@
-@import "../../../styles/breakpoints.scss";
-
-.footer{
+.footer {
   margin: auto;
   height: auto;
   display: flex;
-  //flex-direction: column;
   flex-direction: row;
   justify-content: center;
   align-items: center;
   padding: 90px 30px;
- // background:var(--primary-text);
-
 }
+
 .copyrightLogo {
   color: darkslateblue;
   font-size: 12px;
@@ -21,14 +17,15 @@
   width: 90%;
   display: flex;
   justify-content: center;
-  align-items: center;}
-
-.logoCatsWrapper{
-  width: 270px;
-  margin-left:3%
+  align-items: center;
 }
 
-.logo{
+.logoCatsWrapper {
+  width: 270px;
+  margin-left: 3%;
+}
+
+.logo {
   width: 100%;
   height: 100%;
 }
@@ -40,14 +37,14 @@
   justify-content: flex-start;
   padding: 0px;
   margin-right: 40px;
-  h4 {
-    margin: 0px 0px 30px 0px;
-    font-size: 18px;
-    line-height: 32px;
-  }
-  p {
-    font-size: 16px;
-  }
+}
+.copyright h4 {
+  margin: 0px 0px 30px 0px;
+  font-size: 18px;
+  line-height: 32px;
+}
+.copyright p {
+  font-size: 16px;
 }
 
 .contacts {
@@ -59,16 +56,16 @@
   align-items: flex-end;
   text-align: right;
   color: var(--primary-text);
-  p{
-    font-family: "AbrilFatface", sans-serif;
-    font-size: 18px;
-    margin-bottom: 5px;
-    text-align: right;
-    width: 100%;
-  }
-  a{
-    all: unset;
-  }
-
-
 }
+.contacts p {
+  font-family: "AbrilFatface", sans-serif;
+  font-size: 18px;
+  margin-bottom: 5px;
+  text-align: right;
+  width: 100%;
+}
+.contacts a {
+  all: unset;
+}
+
+/*# sourceMappingURL=footer.module.css.map */
