--- a/styles/assets/home.module.scss
+++ b/styles/assets/home.module.scss
@@ -1,15 +1,44 @@
-@import "../styles/breakpoints.scss";
+
 
 .container{
-  background: #1a344b;
+  //background: #1a344b;
+  background-color: transparent;
   margin: 0;
-  padding: 0;
-  //position: relative;
+  //padding-bottom: 40px;
+  position: relative;
+  width: 100%;
+  height: 50vh;
 
-  .imageWrapper{
-    height: 50vw;
+  @include respond-to("l"){
+    padding-bottom: 0;
+    margin-top: 20rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+}
+.wrapper{
+  width: 100%;
+  padding-top: 100%;
+  position: relative;
+  @include respond-to("m") {
     width: 100vw;
-    position: relative;
+    // height: 100vh;
+    // padding: 0;
+  }
+}
+.imageWrapper{
+  //display: none;
+  @include respond-to("l") {
+    max-height: 80%;
+    display: block;
+  }
+
+  // add a image for phone
+  .mobileImage {
+    @include respond-to("l") {
+      display: none;
+    }
   }
 }
 
@@ -28,3 +57,4 @@
   align-items: center;
   justify-content: center;
 }
+
