--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -1,13 +1,14 @@
 @import "./breakpoints.scss";
 
 
-
 .container {
+  background: #1a344b;
+  // background-color: transparent;
   margin: 0;
   padding: 0;
-  width: 100%;
-  height: 100vh;
-  background-color: transparent;
+  //width: 100%;
+ // max-height: 1200px;
+
   position: relative;
   display: flex;
   align-items: center;
@@ -18,7 +19,6 @@
   }
 
   .imageWrapper {
-    height: 100vw;
     width: 100vw;
     position: relative;
     //background: #000000;
@@ -26,14 +26,14 @@
   }
   .imageHero {
    opacity: 85%;
-    width: 100vw;
+    width: 100%;
   }
 
 
 
   .textHero{
     position: absolute;
-    bottom: 50%;
+    bottom: 49%;
     margin-left: 30%;
     margin-right: auto;
     letter-spacing: 1px;
@@ -41,7 +41,7 @@
     p{
       margin-left: 8%;
       font-family: "AbrilFatface", sans-serif;
-      font-size: clamp(16px, 5vw, 25px);
+      font-size: clamp(16px, 2vw, 25px);
       color: wheat;
 
     }
@@ -51,14 +51,7 @@
         font-size: 90px;
       }
 
-
     }
-
-
-
-
   }
-
-
 
 }
