--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -1,5 +1,5 @@
 .container {
-  background: #1a344b;
+  background: #000000;
   margin: 0;
   padding: 0;
   position: relative;
@@ -18,19 +18,35 @@
   opacity: 85%;
   width: 100%;
 }
+.container .titleHero {
+  letter-spacing: 0.2rem;
+  word-spacing: 2rem;
+  text-shadow: 2px 2px rgba(248, 207, 146, 0.4470588235);
+}
 .container .textHero {
+  display: flex;
   position: absolute;
+  flex-direction: column;
   bottom: 49%;
+  align-items: center;
+  justify-content: center;
   margin-left: 30%;
   margin-right: auto;
   letter-spacing: 1px;
   z-index: 1;
 }
-.container .textHero p {
-  margin-left: 8%;
+.container .textHero h2 {
+  letter-spacing: 0.2rem;
   font-family: "AbrilFatface", sans-serif;
   font-size: clamp(16px, 2vw, 25px);
   color: wheat;
+  text-shadow: 2px 2px #000000;
+}
+.container .textHero p {
+  font-size: clamp(16px, 2vw, 18px);
+  padding-top: 1.5rem;
+  color: wheat;
+  text-shadow: 2px 2px #000000;
 }
 @media (min-width: 1336px) {
   .container .textHero h1 {
