all information Print Ut

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,7 +4,7 @@
  */
 :root {
   --background: #ffffff;
-  --background-color: rgba(248, 207, 146, 0.45);
+  --background-color: #f4eae1;
   --primary-text: #000000 ;
   --secondary-text: #575656FF ;
   --hover-color: #1a344b;
