--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -2,6 +2,8 @@
   background: #000000;
   margin: 0;
   padding: 0;
+  width: 100%;
+  max-height: 1200px;
   position: relative;
   display: flex;
   align-items: center;
@@ -11,42 +13,126 @@
   position: relative;
 }
 .container .imageWrapper {
+  margin-top: 23%;
   width: 100vw;
   position: relative;
 }
-.container .imageHero {
-  opacity: 85%;
-  width: 100%;
+@media (min-width: 767px) {
+  .container .imageWrapper {
+    margin-top: 16%;
+  }
+}
+@media (min-width: 1024px) {
+  .container .imageWrapper {
+    margin-top: 5.9%;
+  }
+}
+@media (min-width: 1336px) {
+  .container .imageWrapper {
+    margin-top: 6.4%;
+  }
+}
+@media (min-width: 1639px) {
+  .container .imageWrapper {
+    margin-top: 3.9%;
+  }
+}
+.container .imageHeroDesktop {
+  visibility: hidden;
+}
+@media (min-width: 767px) {
+  .container .imageHeroDesktop {
+    visibility: visible;
+    width: 100%;
+    opacity: 95%;
+  }
+}
+.container .containerHeroMobile {
+  visibility: visible;
+  opacity: 95%;
+}
+@media (min-width: 767px) {
+  .container .containerHeroMobile {
+    padding: 0;
+    visibility: hidden;
+    display: none;
+  }
 }
 .container .titleHero {
   letter-spacing: 0.2rem;
-  word-spacing: 2rem;
-  text-shadow: 2px 2px rgba(248, 207, 146, 0.4470588235);
+  word-spacing: 1rem;
+  color: var(--background);
 }
 .container .textHero {
+  background: rgba(10, 10, 10, 0.5);
+  border-radius: 11px;
   display: flex;
   position: absolute;
   flex-direction: column;
-  bottom: 49%;
+  bottom: 54%;
   align-items: center;
   justify-content: center;
-  margin-left: 30%;
+  margin-left: 12%;
   margin-right: auto;
   letter-spacing: 1px;
   z-index: 1;
+  padding: 0.5rem 0.2rem;
+}
+@media (min-width: 767px) {
+  .container .textHero {
+    bottom: 38%;
+    margin-left: 10%;
+    padding: 1rem 0.5rem;
+  }
+}
+@media (min-width: 1024px) {
+  .container .textHero {
+    bottom: 47%;
+    margin-left: 23%;
+  }
+}
+@media (min-width: 1336px) {
+  .container .textHero {
+    bottom: 35%;
+    margin-left: 23%;
+  }
+}
+@media (min-width: 1639px) {
+  .container .textHero {
+    bottom: 42%;
+    margin-left: 30%;
+  }
+}
+.container .textHero h1 {
+  font-size: clamp(30px, 2vw, 35px);
+}
+@media (min-width: 767px) {
+  .container .textHero h1 {
+    font-size: 75px;
+  }
 }
 .container .textHero h2 {
   letter-spacing: 0.2rem;
-  font-family: "AbrilFatface", sans-serif;
-  font-size: clamp(16px, 2vw, 25px);
-  color: wheat;
-  text-shadow: 1px 1px #000000;
+  font-size: clamp(14px, 2vw, 18px);
+  color: var(--background);
+  text-shadow: 1px 1px var(--primary-text);
+}
+@media (min-width: 767px) {
+  .container .textHero h2 {
+    font-size: clamp(14px, 5vw, 40px);
+  }
 }
 .container .textHero p {
-  font-size: clamp(16px, 2vw, 18px);
-  padding-top: 1.5rem;
-  color: wheat;
-  text-shadow: 1px 1px #000000;
+  font-family: "AbrilFatface", sans-serif;
+  font-size: clamp(12px, 2vw, 14px);
+  padding-top: 0.5rem;
+  color: var(--background);
+  text-shadow: 1px 1px var(--primary-text);
+}
+@media (min-width: 767px) {
+  .container .textHero p {
+    font-size: clamp(12px, 5vw, 22px);
+  }
 }
 @media (min-width: 1336px) {
   .container .textHero h1 {
