--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -3,12 +3,10 @@
 
 .container {
   background: #000000;
-  // background-color: transparent;
   margin: 0;
   padding: 0;
-  //width: 100%;
- // max-height: 1200px;
-
+  width: 100%;
+  max-height: 1200px;
   position: relative;
   display: flex;
   align-items: center;
@@ -19,44 +17,114 @@
   }
 
   .imageWrapper {
+    margin-top: 23%;
     width: 100vw;
     position: relative;
 
+    @include respond-to("s"){
+      margin-top: 16%;
+    }
+    @include respond-to("m"){
+      margin-top: 5.9%;
+    }
+
+    @include respond-to("l"){
+      margin-top: 6.4%;
+    }
+    @include respond-to("xl"){
+      margin-top: 3.9%;
+    }
+
   }
-  .imageHero {
-   opacity: 85%;
-    width: 100%;
+  .imageHeroDesktop {
+    visibility: hidden;
+
+    @include respond-to("s"){
+      visibility: visible;
+      width: 100%;
+      opacity: 95%;
+    }
+  }
+
+  .containerHeroMobile{
+    visibility: visible;
+    opacity: 95%;
+
+    @include respond-to("s"){
+      padding: 0;
+      visibility: hidden;
+      display: none;
+    }
+
   }
 
 .titleHero{
   letter-spacing: 0.2rem;
-  word-spacing: 2rem;
-  text-shadow: 2px 2px #F8CF9272
+  word-spacing: 1rem;
+  color: var(--background);
+  //text-shadow: 1px 1px var(--secondary-color);
+
 }
 
   .textHero{
+    background: rgba(10, 10, 10, 0.5);
+    border-radius: 11px;
     display: flex;
     position: absolute;
     flex-direction: column;
-    bottom: 49%;
+    bottom: 54%;
     align-items: center;
     justify-content: center;
-    margin-left: 30%;
+    margin-left: 12%;
     margin-right: auto;
     letter-spacing: 1px;
-    z-index: 1;
+    z-index: 1 ;
+    padding: 0.5rem 0.2rem  ;
+    @include respond-to("s"){
+      bottom: 38%;
+      margin-left: 10%;
+      padding: 1rem 0.5rem;
+    }
+    @include respond-to("m"){
+      bottom: 47%;
+      margin-left: 23%;
+    }
+    @include respond-to("l"){
+      bottom: 35%;
+      margin-left: 23%;
+    }
+    @include respond-to("xl"){
+      bottom: 42%;
+      margin-left: 30%;
+    }
+  h1{
+    font-size: clamp(30px, 2vw, 35px);
+    @include respond-to("s"){
+      font-size:75px;
+    }
+  }
+
     h2{
       letter-spacing: 0.2rem;
-      font-family: "AbrilFatface", sans-serif;
-      font-size: clamp(16px, 2vw, 25px);
-      color: wheat;
-      text-shadow: 1px 1px #000000
+      font-size: clamp(14px, 2vw, 18px);
+      color: var(--background);
+      text-shadow: 1px 1px var(--primary-text);
+      @include respond-to("s"){
+        font-size: clamp(14px, 5vw, 40px);
+      }
+
+
     }
     p{
-      font-size: clamp(16px, 2vw, 18px);
-      padding-top: 1.5rem;
-      color: wheat;
-      text-shadow: 1px 1px #000000
+      font-family: "AbrilFatface", sans-serif;
+      font-size: clamp(12px, 2vw, 14px);
+      padding-top: 0.5rem;
+      color: var(--background);
+      text-shadow: 1px 1px var(--primary-text);
+      @include respond-to("s"){
+        font-size: clamp(12px, 5vw, 22px);
+      }
+
     }
 
     @include respond-to("l"){
