--- a/styles/home.module.css
+++ b/styles/home.module.css
@@ -1,7 +1,6 @@
 .container {
   background: #000000;
   margin: 0;
-  padding: 0;
   width: 100%;
   max-height: 1200px;
   position: relative;
@@ -11,31 +10,11 @@
 }
 .container .wrapper {
   position: relative;
+  padding-top: 75px;
 }
 .container .imageWrapper {
-  margin-top: 23%;
   width: 100vw;
   position: relative;
-}
-@media (min-width: 767px) {
-  .container .imageWrapper {
-    margin-top: 16%;
-  }
-}
-@media (min-width: 1024px) {
-  .container .imageWrapper {
-    margin-top: 5.9%;
-  }
-}
-@media (min-width: 1336px) {
-  .container .imageWrapper {
-    margin-top: 6.4%;
-  }
-}
-@media (min-width: 1639px) {
-  .container .imageWrapper {
-    margin-top: 3.9%;
-  }
 }
 .container .imageHeroDesktop {
   visibility: hidden;
@@ -53,7 +32,6 @@
 }
 @media (min-width: 767px) {
   .container .containerHeroMobile {
-    padding: 0;
     visibility: hidden;
     display: none;
   }
