--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -4,7 +4,7 @@
 .container {
   background: #000000;
   margin: 0;
-  padding: 0;
+
   width: 100%;
   max-height: 1200px;
   position: relative;
@@ -14,25 +14,25 @@
 
   .wrapper{
     position: relative;
+    padding-top: 75px;
   }
 
   .imageWrapper {
-    margin-top: 23%;
     width: 100vw;
     position: relative;
 
     @include respond-to("s"){
-      margin-top: 16%;
+      //margin-top: 16%;
     }
     @include respond-to("m"){
-      margin-top: 5.9%;
+      //margin-top: 5.9%;
     }
 
     @include respond-to("l"){
-      margin-top: 6.4%;
+     // margin-top: 6.4%;
     }
     @include respond-to("xl"){
-      margin-top: 3.9%;
+      //margin-top: 3.9%;
     }
 
   }
@@ -51,7 +51,7 @@
     opacity: 95%;
 
     @include respond-to("s"){
-      padding: 0;
+
       visibility: hidden;
       display: none;
     }
