--- a/lib/components/Sections/GoalSection/GoalSection.module.css
+++ b/lib/components/Sections/GoalSection/GoalSection.module.css
@@ -1,3 +1,156 @@
+.container {
+  box-sizing: border-box;
+  margin: 0.5rem;
+  display: block;
+  justify-content: center;
+  align-items: center;
+}
+@media (min-width: 1024px) {
+  .container {
+    display: flex;
+    margin: 1.5rem 2rem;
+  }
+}
+@media (min-width: 1336px) {
+  .container {
+    margin: 4rem 2rem;
+  }
+}
+.container .wrapper {
+  display: flex;
+  flex-direction: column;
+  max-width: 1500px;
+  margin: auto;
+}
+@media (min-width: 1024px) {
+  .container .wrapper {
+    flex-direction: row;
+  }
+}
+@media (min-width: 1336px) {
+  .container .wrapper {
+    margin: 1em auto;
+    flex-direction: row;
+  }
+}
+@media (min-width: 1639px) {
+  .container .wrapper {
+    max-width: 1900px;
+  }
+}
 
+/*
+.img {
+  position: absolute;
+  //top: -5%;
+  @include respond-to("s") {
+    position: relative;
+    top: -35%;
+  }
+}
+*/
+.left {
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  position: relative;
+}
+@media (min-width: 767px) {
+  .left {
+    display: flex;
+    margin-top: -25%;
+  }
+}
+@media (min-width: 1024px) {
+  .left {
+    width: 60%;
+    margin-top: -15%;
+  }
+}
+@media (min-width: 1336px) {
+  .left {
+    width: 50%;
+  }
+}
+
+.right {
+  justify-content: center;
+  margin-left: 1em;
+  margin-top: -3rem;
+  width: 90%;
+  position: relative;
+  z-index: 1;
+}
+.right h3, .right h2 {
+  text-align: center;
+  margin-top: 1rem;
+}
+.right p {
+  text-align: left;
+  margin-bottom: 1.5rem;
+  margin-top: 1rem;
+  padding: 0 0.5em;
+}
+@media (min-width: 767px) {
+  .right {
+    padding: 0;
+  }
+  .right p {
+    padding: 0 0.5em;
+  }
+}
+@media (min-width: 1024px) {
+  .right {
+    margin-top: 1rem;
+    width: 55%;
+    margin-left: 2em;
+  }
+  .right h2, .right h3 {
+    text-align: left;
+    padding-bottom: 1em;
+  }
+  .right p {
+    text-align: left;
+    padding-bottom: 1em;
+  }
+}
+.right li {
+  color: var(--primary-color);
+}
+@media (min-width: 1639px) {
+  .right {
+    width: 50%;
+    margin-right: 2em;
+  }
+  .right p {
+    margin-right: 2em;
+  }
+}
+
+.dot {
+  border-radius: 50%;
+  background-color: var(--primary-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--secondary-text);
+  width: 30px;
+  height: 30px;
+  min-width: 30px;
+}
+
+.ulWrapper {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-top: 1rem;
+  padding: 0 0.7em;
+}
+@media (min-width: 767px) {
+  .ulWrapper {
+    padding: 0 1em;
+  }
+}
 
 /*# sourceMappingURL=GoalSection.module.css.map */
