--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -4,7 +4,6 @@
 .container {
   background: #000000;
   margin: 0;
-
   width: 100%;
   max-height: 1200px;
   position: relative;
@@ -14,10 +13,10 @@
 
   .wrapper{
     position: relative;
-    padding-top: 75px;
   }
 
   .imageWrapper {
+    padding-top: 75px;
     width: 100vw;
     position: relative;
 
@@ -37,16 +36,19 @@
 
   }
   .imageHeroDesktop {
-    visibility: hidden;
+   visibility: hidden;
+    display: none;
 
     @include respond-to("s"){
       visibility: visible;
       width: 100%;
       opacity: 95%;
+      display: flex;
     }
   }
 
   .containerHeroMobile{
+    margin: 0;
     visibility: visible;
     opacity: 95%;
 
