--- a/lib/components/Sections/LostCatSection/LostCatSection.module.css
+++ b/lib/components/Sections/LostCatSection/LostCatSection.module.css
@@ -1,3 +1,222 @@
+.container {
+  box-sizing: border-box;
+  margin: 0;
+  justify-content: center;
+  align-items: center;
+  background-color: #f3af97;
+  padding: 0 1.5rem;
+}
+@media (min-width: 767px) {
+  .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
+}
+@media (min-width: 1024px) {
+  .container {
+    align-items: flex-start;
+    padding: 80px 40px;
+  }
+}
+@media (min-width: 1639px) {
+  .container {
+    padding: 95px 40px;
+  }
+}
+.container .wrapper {
+  display: flex;
+  max-width: 1600px;
+  margin: auto;
+  flex-direction: column;
+  justify-content: space-between;
+  height: auto;
+  padding-bottom: 2rem;
+}
+@media (min-width: 1024px) {
+  .container .wrapper {
+    margin: 40px auto;
+    flex-direction: row;
+  }
+}
+@media (min-width: 1336px) {
+  .container .wrapper {
+    margin-left: 1rem;
+  }
+}
+@media (min-width: 1639px) {
+  .container .wrapper {
+    max-width: 1900px;
+    margin: 0 3.7rem 0 2.5rem;
+  }
+}
 
+.header {
+  text-align: left;
+  margin: 0 1em;
+}
+.header h2 {
+  padding: 1em 0;
+  text-align: center;
+  margin-top: 35px;
+  margin-left: 0;
+}
+.header p {
+  padding-bottom: 1.5em;
+  padding-right: 1rem;
+  text-align: left;
+}
+@media (min-width: 767px) {
+  .header {
+    margin: 0 1.5em;
+  }
+}
+@media (min-width: 1024px) {
+  .header {
+    text-align: left;
+    width: 80%;
+    margin: 0;
+  }
+}
+@media (min-width: 1336px) {
+  .header {
+    width: 75%;
+  }
+}
+@media (min-width: 1639px) {
+  .header {
+    width: 50%;
+  }
+}
+
+.itemContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: var(--background-color);
+  border-radius: 10px;
+  padding-bottom: 1em;
+  width: max(300px, 80%);
+  height: max(300px, 80%);
+  margin-bottom: 1rem;
+}
+@media (min-width: 767px) {
+  .itemContainer {
+    gap: 12px;
+    height: max(350px, 90%);
+    margin: 30px;
+    padding: 15px;
+  }
+}
+@media (min-width: 1024px) {
+  .itemContainer {
+    width: max(270px, 85%);
+    height: max(270px, 85%);
+    gap: 5px;
+    margin-bottom: 2rem;
+  }
+}
+@media (min-width: 1336px) {
+  .itemContainer {
+    width: max(245px, 60%);
+    height: max(260px, 85%);
+  }
+}
+@media (min-width: 1639px) {
+  .itemContainer {
+    width: max(260px, 85%);
+    height: max(260px, 85%);
+  }
+}
+
+.itemContainer:hover {
+  color: var(--secondary-text);
+  transition: all 0.4s ease-in;
+  cursor: pointer;
+}
+
+.item {
+  width: max(250px, 80%);
+  height: max(250px, 65%);
+}
+.item p {
+  padding-top: 1em;
+  font-size: 16px;
+}
+.item h4 {
+  color: var(--primary-text);
+  font-size: 20px;
+  font-weight: bold;
+  margin-bottom: 6px;
+}
+@media (min-width: 767px) {
+  .item {
+    width: max(250px, 80%);
+    height: max(250px, 80%);
+  }
+}
+@media (min-width: 1336px) {
+  .item {
+    width: max(210px, 50%);
+  }
+}
+@media (min-width: 1639px) {
+  .item {
+    padding-bottom: 3em;
+    width: max(250px, 50%);
+  }
+}
+
+/*.iconContainer {
+  border-radius: 100px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50px;
+  height: 50px;
+  margin-bottom: 18px;
+}*/
+.gridContainer {
+  display: block;
+  max-width: 300px;
+  width: 100vw;
+  margin-top: 40px;
+  margin-left: 5.5%;
+}
+@media (min-width: 767px) {
+  .gridContainer {
+    align-items: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 0 1em;
+    margin-bottom: 2rem;
+    height: 100%;
+    overflow: hidden;
+    visibility: visible;
+    max-width: 750px;
+    margin-left: 0;
+  }
+}
+@media (min-width: 1024px) {
+  .gridContainer {
+    grid-auto-rows: 1fr 1fr 1fr;
+    margin-bottom: 2.5rem;
+    column-gap: 0.5em;
+    max-width: 850px;
+    margin-left: auto;
+  }
+}
+@media (min-width: 1336px) {
+  .gridContainer {
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+}
+@media (min-width: 1639px) {
+  .gridContainer {
+    padding-left: 1.5em;
+    column-gap: 1.5em;
+    max-width: 1100px;
+  }
+}
 
 /*# sourceMappingURL=LostCatSection.module.css.map */
