--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -35,6 +35,11 @@
   src: url("./assets/fonts/AbrilFatface-Regular.ttf");
 }
 
+@font-face {
+  font-family: "Poppins";
+  src: url("./assets/fonts/Poppins-Regular.ttf");
+}
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -67,7 +72,7 @@ h1 {
 //Titles sections
 h2 {
   font-family: "AbrilFatface", sans-serif;
-  font-size: clamp(30px, 4vw, 65px);
+  font-size: clamp(25px, 3.3vw, 50px);
   color: var(--primary-text);
 }
 
