--- a/styles/globals.css
+++ b/styles/globals.css
@@ -71,8 +71,13 @@ p {
 }
 
 h3 {
-  font-size: clamp(16px, 2.5vw, 50px);
+  font-size: clamp(16px, 2.5vw, 30px);
   color: var(--secondary-text);
+}
+
+h4 {
+  font-size: 15px;
+  font-family: "Poppins";
 }
 
 .buttonStyle {
