--- a/lib/components/Sections/HomelessSection/HomelessSection.module.css
+++ b/lib/components/Sections/HomelessSection/HomelessSection.module.css
@@ -1,17 +1,53 @@
 .container {
   position: relative;
+  background-color: black;
+  padding: 0;
+  margin: 0;
+  max-height: 1500px;
 }
 
 .textContainer {
   position: absolute;
-  top: 35%;
-  left: 5%;
+  top: 10%;
+  left: 15%;
   margin-bottom: 10px;
-  width: 25%;
+  width: 75%;
   word-spacing: 0.2px;
 }
-.textContainer h2, .textContainer p {
+.textContainer h2, .textContainer h3, .textContainer p {
   color: white;
+}
+.textContainer h2, .textContainer h3 {
+  text-align: center;
+  padding-bottom: 0.5rem;
+  letter-spacing: 1px;
+}
+@media (min-width: 767px) {
+  .textContainer {
+    top: 19%;
+    left: 65%;
+    width: 32%;
+  }
+  .textContainer h2, .textContainer h3 {
+    text-align: left;
+  }
+}
+@media (min-width: 1024px) {
+  .textContainer {
+    top: 15%;
+    left: 5%;
+  }
+}
+@media (min-width: 1336px) {
+  .textContainer {
+    top: 20%;
+    left: 5%;
+  }
+}
+@media (min-width: 1639px) {
+  .textContainer {
+    width: 28%;
+  }
 }
 
 .donateBtn {
@@ -19,22 +55,52 @@
   font-family: "ConcertOne", sans-serif;
   border-radius: 2.5px;
   border: 0.9px solid var(--background);
-  width: 160px;
-  padding: 9px;
+  width: 170px;
+  padding: 7px;
   background: transparent;
   color: var(--background);
   position: absolute;
-  top: 60%;
-  left: 5%;
+  top: 70%;
+  left: 27%;
   cursor: pointer;
   transition: 0.5s ease-in-out;
+}
+@media (min-width: 767px) {
+  .donateBtn {
+    top: 68%;
+    left: 65%;
+    width: 160px;
+    padding: 9px;
+  }
+}
+@media (min-width: 1024px) {
+  .donateBtn {
+    top: 55%;
+    left: 5%;
+  }
+}
+@media (min-width: 1336px) {
+  .donateBtn {
+    top: 50%;
+  }
+}
+@media (min-width: 1639px) {
+  .donateBtn {
+    width: 190px;
+    font-size: 22px;
+  }
 }
 
 .donateBtn:hover {
   background-color: var(--hover-color);
+  color: var(--secondary-text);
   opacity: 0.5;
   transition: 0.5s ease-in-out;
   border: 0.9px solid rgb(155, 155, 155);
+}
+
+.imgContainer {
+  opacity: 70%;
 }
 
 /*# sourceMappingURL=HomelessSection.module.css.map */
