--- a/lib/components/footer/footer.module.scss
+++ b/lib/components/footer/footer.module.scss
@@ -1,32 +1,80 @@
 @import "../../../styles/breakpoints.scss";
 
 .footer{
+  max-width: 1600px;
   margin: auto;
   height: auto;
   display: flex;
-  //flex-direction: column;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 90px 30px;
- // background:var(--primary-text);
+  padding: 2% 5%;
+ background:var(--secondary-text);
+
+  @include respond-to("s") {
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 90px 45px;
+  }
+
+  @include respond-to("xl"){
+    max-width: 1900px;
+  }
 
 }
 .copyrightLogo {
-  color: darkslateblue;
-  font-size: 12px;
+  color: var(--hover-color);
+  font-size: 16px;
   cursor: pointer;
 }
+
+.copyrightLogo:hover {
+  color: var(--background);
+  transition: all 0.4s ease-in;
+}
+
+
 
 .logosWrapper {
   width: 90%;
   display: flex;
   justify-content: center;
-  align-items: center;}
+  align-items: center;
+
+  @include respond-to("s") {
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    padding: 0 ;
+
+
+  }
+  @include respond-to("m") {
+    margin-right: 2%;
+  }
+
+  @include respond-to("xl") {
+    margin-left: 2%;
+  }
+}
 
 .logoCatsWrapper{
   width: 270px;
-  margin-left:3%
+  margin-left:3%;
+
+  @include respond-to("s") {
+  width: 200px;
+  margin-left: 0.5em;
+}
+  @include respond-to("m") {
+    width: 270px;
+    margin-left:3%
+  }
+  @include respond-to("xl") {
+    width: 300px;
+    margin-left:0;
+  }
 }
 
 .logo{
@@ -45,11 +93,37 @@
     margin: 0px 0px 30px 0px;
     font-size: 18px;
     line-height: 32px;
+    color: var(--background);
   }
   p {
     font-size: 16px;
+    color: var(--background);
   }
+  @include respond-to("s") {
+    width: 110%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    padding: 0px;
+    margin-right: 40px;
+    h4 {
+      margin: 0px 0px 30px 0px;
+      font-size: 18px;
+      line-height: 32px;
+    }
+    p {
+      font-size: 16px;
+    }
+    @include respond-to("m"){
+      h4 {
+        font-size: 25px;
+
+      }
+    }
+  }
+
 }
+
 
 .contacts {
   padding: 0px;
@@ -59,17 +133,64 @@
   justify-content: flex-start;
   align-items: flex-end;
   text-align: right;
-  color: var(--primary-text);
+  cursor: pointer;
+h3, p{
+  color: var(--background);
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+  h3:hover{
+    color: var(--hover-color);
+    transition: all 0.4s ease-in;
+  }
   p{
     font-family: "AbrilFatface", sans-serif;
-    font-size: 18px;
-    margin-bottom: 5px;
+    font-size: 16px;
     text-align: right;
     width: 100%;
   }
+
   a{
     all: unset;
+
   }
 
+  @include respond-to("s") {
+    padding: 0px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-end;
+    text-align: right;
+
+    h3 {
+      font-size: 25px;
+      text-align: right;
+      margin-bottom: 40px;
+      line-height: 50px;
+      width: 100%;
+      margin-top: -12px;
+    }
+
+    p {
+      font-size: 18px;
+      margin-bottom: 5px;
+      text-align: right;
+      width: 100%;
+    }
+  }
+
+  @include respond-to("m"){
+    h3 {
+      font-size: 30px;
+    }
+  }
+  @include respond-to("xl"){
+    margin-right: 3em;
+  }
 
 }
+
+
+
