--- a/lib/components/Sections/CanHelpYouSection/CanHelpYouSection.module.css
+++ b/lib/components/Sections/CanHelpYouSection/CanHelpYouSection.module.css
@@ -1,3 +1,138 @@
+.container {
+  display: block;
+  justify-content: center;
+  align-items: center;
+  background: #f3af97;
+}
+@media (min-width: 1024px) {
+  .container {
+    display: flex;
+  }
+}
+.container .wrapper {
+  display: flex;
+  flex-direction: column;
+  max-width: 1500px;
+  margin: auto;
+}
+@media (min-width: 1024px) {
+  .container .wrapper {
+    flex-direction: row;
+  }
+}
+@media (min-width: 1336px) {
+  .container .wrapper {
+    margin: 1em auto;
+    flex-direction: row;
+  }
+}
+@media (min-width: 1639px) {
+  .container .wrapper {
+    max-width: 1900px;
+  }
+}
 
+.right {
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  margin: 0 auto;
+  position: relative;
+}
+@media (min-width: 767px) {
+  .right {
+    display: flex;
+    margin-top: 2rem;
+  }
+}
+@media (min-width: 1024px) {
+  .right {
+    width: 50%;
+  }
+}
+@media (min-width: 1336px) {
+  .right {
+    width: 50%;
+  }
+}
+
+.left {
+  justify-content: center;
+  margin-left: 1em;
+  margin-top: -3rem;
+  width: 90%;
+  position: relative;
+  z-index: 1;
+}
+.left h3, .left h2 {
+  text-align: center;
+  margin-top: 1rem;
+}
+.left p {
+  text-align: left;
+  margin-bottom: 1.5rem;
+  margin-top: 1rem;
+  padding: 0 0.5em;
+}
+@media (min-width: 767px) {
+  .left {
+    padding: 0;
+  }
+  .left p {
+    padding: 0 0.5em;
+  }
+}
+@media (min-width: 1024px) {
+  .left {
+    margin-top: 1rem;
+    width: 55%;
+    margin-left: 2em;
+  }
+  .left h2, .left h3 {
+    text-align: left;
+    padding-bottom: 1em;
+  }
+  .left p {
+    text-align: left;
+    padding-bottom: 1em;
+  }
+}
+.left li {
+  color: var(--primary-color);
+}
+@media (min-width: 1639px) {
+  .left {
+    width: 50%;
+    margin-right: 2em;
+  }
+  .left p {
+    margin-right: 2em;
+  }
+}
+
+.dot {
+  border-radius: 50%;
+  background-color: var(--background);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--primary-color);
+  width: 50px;
+  height: 50px;
+  min-width: 30px;
+}
+
+.ulWrapper {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+  margin-top: 1rem;
+  padding: 0 0.7em;
+}
+@media (min-width: 767px) {
+  .ulWrapper {
+    padding: 0 2em;
+  }
+}
 
 /*# sourceMappingURL=CanHelpYouSection.module.css.map */
