--- a/lib/components/Sections/EmergencySection/EmergencySection.module.css
+++ b/lib/components/Sections/EmergencySection/EmergencySection.module.css
@@ -58,10 +58,9 @@
   top: 7%;
   left: -4%;
   background: url("../../../../styles/assets/images/catEmergency.jpg");
-  background-position: 0%;
+  background-position: 0;
   background-repeat: no-repeat;
   background-size: 74%;
-  z-index: 1;
   opacity: 0.5;
   overflow: hidden;
   padding: 0;
@@ -207,7 +206,7 @@
   text-align: left;
   margin-bottom: 25px;
   color: var(--primary-text);
-  padding-top: 0px;
+  padding-top: 0;
 }
 @media (min-width: 767px) {
   .question {
@@ -244,7 +243,7 @@
 }
 @media (min-width: 767px) {
   .dot {
-    margin-top: 0px;
+    margin-top: 0;
   }
 }
 .dot.rotate {
