--- a/lib/components/Sections/CanHelpYouSection/CanHelpYouSection.module.css
+++ b/lib/components/Sections/CanHelpYouSection/CanHelpYouSection.module.css
@@ -3,6 +3,13 @@
   justify-content: center;
   align-items: center;
   background: #f3af97;
+  padding-top: 17%;
+  margin-bottom: -1%;
+}
+@media (min-width: 767px) {
+  .container {
+    padding-top: 10%;
+  }
 }
 @media (min-width: 1024px) {
   .container {
@@ -12,7 +19,7 @@
 .container .wrapper {
   display: flex;
   flex-direction: column;
-  max-width: 1500px;
+  max-width: 1200px;
   margin: auto;
 }
 @media (min-width: 1024px) {
@@ -43,6 +50,7 @@
   .right {
     display: flex;
     margin-top: 2rem;
+    margin-bottom: 1.5rem;
   }
 }
 @media (min-width: 1024px) {
@@ -66,7 +74,7 @@
 }
 .left h3, .left h2 {
   text-align: center;
-  margin-top: 1rem;
+  margin-top: 1.5rem;
 }
 .left p {
   text-align: left;
@@ -79,14 +87,16 @@
     padding: 0;
   }
   .left p {
-    padding: 0 0.5em;
+    margin-top: 2rem;
+    margin-bottom: 2.5rem;
+    padding: 0 2rem;
   }
 }
 @media (min-width: 1024px) {
   .left {
-    margin-top: 1rem;
-    width: 55%;
-    margin-left: 2em;
+    margin-top: -1rem;
+    width: 50%;
+    margin-left: 2.5rem;
   }
   .left h2, .left h3 {
     text-align: left;
@@ -117,9 +127,16 @@
   justify-content: center;
   align-items: center;
   color: var(--primary-color);
-  width: 50px;
-  height: 50px;
-  min-width: 30px;
+  width: 25px;
+  height: 25px;
+  min-width: 25px;
+}
+@media (min-width: 767px) {
+  .dot {
+    width: 40px;
+    height: 40px;
+    min-width: 30px;
+  }
 }
 
 .ulWrapper {
@@ -127,11 +144,16 @@
   align-items: center;
   gap: 20px;
   margin-top: 1rem;
-  padding: 0 0.7em;
+  padding: 0 1em;
 }
 @media (min-width: 767px) {
   .ulWrapper {
-    padding: 0 2em;
+    padding: 0 5rem;
+  }
+}
+@media (min-width: 1024px) {
+  .ulWrapper {
+    padding: 0 2rem;
   }
 }
 
