--- a/lib/components/Sections/CanHelpYouSection/CanHelpYouSection.module.scss
+++ b/lib/components/Sections/CanHelpYouSection/CanHelpYouSection.module.scss
@@ -1,14 +1,16 @@
 @import "../../../../styles/breakpoints.scss";
 
 .container {
-  //box-sizing: border-box;
-  //margin: 0.5rem ;
   display: block;
   justify-content: center;
   align-items: center;
   background: #f3af97;
+  padding-top: 17% ;
+  margin-bottom: -1%;
 
-
+  @include respond-to("s"){
+    padding-top: 10% ;
+  }
   @include respond-to("m") {
     display: flex;
     //margin: 1.5rem 2rem;
@@ -20,10 +22,9 @@
   .wrapper {
     display: flex;
     flex-direction: column;
-    max-width: 1500px;
+    max-width: 1200px;
     margin: auto;
     @include respond-to("m") {
-      // margin: 10px auto;
       flex-direction: row;
     }
     @include respond-to("l") {
@@ -46,6 +47,7 @@
   @include respond-to("s") {
     display: flex;
     margin-top: 2rem;
+    margin-bottom: 1.5rem;
   }
   @include respond-to("m") {
     width: 50%;
@@ -65,9 +67,8 @@
   z-index: 1;
   h3, h2 {
     text-align: center;
-    margin-top: 1rem;
+    margin-top: 1.5rem;
   }
-
   p {
     text-align: left;
     margin-bottom: 1.5rem;
@@ -78,14 +79,15 @@
   @include respond-to("s"){
     padding: 0 ;
     p{
-      padding: 0 0.5em;
+      margin-top: 2rem;
+      margin-bottom: 2.5rem;
+      padding: 0 2rem;
     }
-
   }
   @include respond-to("m") {
-    margin-top: 1rem;
-    width: 55%;
-    margin-left: 2em;
+    margin-top: -1rem;
+    width: 50%;
+    margin-left: 2.5rem;
     h2, h3 {
       text-align: left;
       padding-bottom: 1em;
@@ -115,9 +117,16 @@
   justify-content: center;
   align-items: center;
   color: var(--primary-color);
-  width: 50px;
-  height: 50px;
-  min-width: 30px;
+  width: 25px;
+  height: 25px;
+  min-width: 25px;
+  @include respond-to("s"){
+    width: 40px;
+    height: 40px;
+    min-width: 30px;
+  }
+
+
 }
 
 .ulWrapper {
@@ -125,8 +134,11 @@
   align-items: center;
   gap: 20px;
   margin-top: 1rem;
-  padding: 0 0.7em;
+  padding: 0 1em;
   @include respond-to("s"){
-    padding: 0 2em;
+    padding: 0 5rem;
+  }
+  @include respond-to("m"){
+    padding: 0 2rem;
   }
 }
