--- a/lib/components/Sections/ContactSection/ContactSection.module.css
+++ b/lib/components/Sections/ContactSection/ContactSection.module.css
@@ -39,6 +39,11 @@
   box-shadow: 0 0 19px 5px rgba(0, 0, 0, 0.2);
   margin-bottom: 50px;
 }
+@media (min-width: 767px) {
+  .contactBox {
+    width: 100%;
+  }
+}
 
 .image {
   width: 100%;
@@ -56,7 +61,7 @@
     height: auto;
     opacity: 80%;
     position: relative;
-    margin-right: 1.5rem;
+    margin-right: 2.5rem;
   }
 }
 
@@ -129,7 +134,6 @@
     z-index: 99;
   }
 }
-
 .buttonStyle {
   padding: 6px;
   font-size: 15px;
