--- a/lib/components/Sections/EmergencySection/EmergencySection.module.css
+++ b/lib/components/Sections/EmergencySection/EmergencySection.module.css
@@ -6,10 +6,15 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 0.5rem 1.5rem 4rem;
+  padding: 2.5rem 1.5rem 4rem;
   position: relative;
   max-width: 1600px;
   background: var(--background-color);
+}
+@media (min-width: 767px) {
+  .wrapper {
+    padding: 6rem 1rem;
+  }
 }
 @media (min-width: 1024px) {
   .wrapper {
@@ -32,6 +37,11 @@
   background-color: transparent;
   z-index: 2;
 }
+@media (min-width: 767px) {
+  .left {
+    width: 100%;
+  }
+}
 @media (min-width: 1024px) {
   .left {
     width: 30%;
@@ -40,7 +50,7 @@
 }
 @media (min-width: 1336px) {
   .left {
-    width: 35%;
+    width: 40%;
     margin: 5px -1%;
   }
 }
@@ -66,11 +76,26 @@
   padding: 0;
   z-index: -100;
 }
+@media (min-width: 767px) {
+  .logo {
+    background-size: 90%;
+    left: 6%;
+    top: 13%;
+  }
+}
+@media (min-width: 1024px) {
+  .logo {
+    background-size: 72%;
+    left: -6%;
+    top: -15%;
+    opacity: 90%;
+  }
+}
 @media (min-width: 1336px) {
   .logo {
+    top: -9%;
     width: 50%;
     position: absolute;
-    top: 0;
     left: -5%;
     background-position: 80%;
     background-repeat: no-repeat;
@@ -83,7 +108,8 @@
 @media (min-width: 1639px) {
   .logo {
     background-position: 60%;
-    background-size: 85%;
+    background-size: 95%;
+    top: -2%;
   }
 }
 
@@ -110,20 +136,19 @@
     top: 0;
     left: 3.5%;
     z-index: 3;
-    width: 30%;
+    width: 40%;
     margin-top: 10%;
   }
 }
 @media (min-width: 1336px) {
   .header {
-    width: 30%;
+    width: 40%;
     font-size: 50px;
   }
 }
 @media (min-width: 1639px) {
   .header {
-    margin-left: 0.3em;
-    left: 5%;
+    left: 2%;
   }
 }
 
@@ -143,7 +168,7 @@
 }
 @media (min-width: 767px) {
   .right {
-    width: 95%;
+    width: 92%;
   }
 }
 @media (min-width: 1024px) {
@@ -161,6 +186,11 @@
   .right {
     width: 50%;
     margin-right: -4%;
+  }
+}
+@media (min-width: 1639px) {
+  .right {
+    margin-right: -2%;
   }
 }
 
