--- a/lib/components/Sections/GoalSection/GoalSection.module.scss
+++ b/lib/components/Sections/GoalSection/GoalSection.module.scss
@@ -44,6 +44,8 @@
   @include respond-to("s") {
     display: flex;
     margin-top: 2rem;
+    width: 50%;
+
   }
   @include respond-to("m") {
     width: 60%;
