--- a/lib/components/Sections/HowToHelpSection/HowToHelpSection.module.css
+++ b/lib/components/Sections/HowToHelpSection/HowToHelpSection.module.css
@@ -54,6 +54,8 @@
 @media (min-width: 767px) {
   .text {
     margin-left: 8%;
+    margin-bottom: 65px;
+    margin-top: -1rem;
   }
 }
 
@@ -86,6 +88,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     margin-left: 26%;
+    padding-bottom: 10%;
   }
 }
 @media (min-width: 1336px) {
