--- a/lib/components/Sections/HowToHelpSection/HowToHelpSection.module.scss
+++ b/lib/components/Sections/HowToHelpSection/HowToHelpSection.module.scss
@@ -50,6 +50,8 @@
   margin-bottom: 60px;
   @include respond-to("s"){
     margin-left: 8%;
+    margin-bottom: 65px;
+    margin-top: -1rem;
   }
 }
 
@@ -76,6 +78,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     margin-left:26%;
+    padding-bottom: 10%;
   }
   @include respond-to("l"){
     padding-bottom: 7%;
