--- a/lib/components/footer/footer.module.css
+++ b/lib/components/footer/footer.module.css
@@ -14,7 +14,7 @@
     flex-direction: row;
     justify-content: center;
     align-items: flex-start;
-    padding: 90px 45px;
+    padding: 5% 2%;
   }
 }
 @media (min-width: 1639px) {
@@ -25,8 +25,13 @@
 
 .copyrightLogo {
   color: var(--hover-color);
-  font-size: 16px;
+  display: flex;
   cursor: pointer;
+}
+.copyrightLogo h4 {
+  padding-top: 0.5rem;
+  padding-left: 0.5rem;
+  font-size: 12px;
 }
 
 .copyrightLogo:hover {
@@ -35,7 +40,7 @@
 }
 
 .logosWrapper {
-  width: 90%;
+  width: 60%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -46,6 +51,7 @@
     justify-content: center;
     align-items: flex-start;
     padding: 0;
+    width: 30%;
   }
 }
 @media (min-width: 1024px) {
@@ -60,13 +66,13 @@
 }
 
 .logoCatsWrapper {
-  width: 270px;
+  width: 250px;
   margin-left: 3%;
 }
 @media (min-width: 767px) {
   .logoCatsWrapper {
     width: 200px;
-    margin-left: 0.5em;
+    margin-left: 0.5rem;
   }
 }
 @media (min-width: 1024px) {
@@ -87,56 +93,59 @@
   height: 100%;
 }
 
-.copyright {
-  width: 110%;
+.textFooter {
+  width: 90%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  padding: 0px;
-  margin-right: 40px;
+  padding: 0;
+  margin-right: 1%;
+  /*  h4 {
+      //margin: 0px 0px 30px 0px;
+      font-size: 18px;
+      line-height: 32px;
+      color: var(--background);
+    }*/
 }
-.copyright h4 {
-  margin: 0px 0px 30px 0px;
-  font-size: 18px;
-  line-height: 32px;
-  color: var(--background);
-}
-.copyright p {
+.textFooter p {
+  font-family: "Poppins", sans-serif;
   font-size: 16px;
   color: var(--background);
 }
 @media (min-width: 767px) {
-  .copyright {
-    width: 110%;
+  .textFooter {
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    padding: 0px;
+    padding: 25px;
     margin-right: 40px;
+    /*    h4 {
+          font-size: 18px;
+          line-height: 32px;
+        }*/
   }
-  .copyright h4 {
-    margin: 0px 0px 30px 0px;
-    font-size: 18px;
-    line-height: 32px;
-  }
-  .copyright p {
+  .textFooter p {
     font-size: 16px;
   }
 }
 @media (min-width: 767px) and (min-width: 1024px) {
-  .copyright h4 {
-    font-size: 25px;
+  .textFooter {
+    margin-right: 42px;
+  }
+  .textFooter p {
+    font-size: 18px;
   }
 }
 
 .contacts {
-  padding: 0px;
+  padding-top: 1.5rem;
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-end;
-  text-align: right;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
   cursor: pointer;
 }
 .contacts h3, .contacts p {
@@ -159,8 +168,8 @@
 }
 @media (min-width: 767px) {
   .contacts {
-    padding: 0px;
-    width: 100%;
+    padding-top: 26px;
+    width: 30%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -168,7 +177,6 @@
     text-align: right;
   }
   .contacts h3 {
-    font-size: 25px;
     text-align: right;
     margin-bottom: 40px;
     line-height: 50px;
@@ -176,7 +184,6 @@
     margin-top: -12px;
   }
   .contacts p {
-    font-size: 18px;
     margin-bottom: 5px;
     text-align: right;
     width: 100%;
@@ -184,7 +191,7 @@
 }
 @media (min-width: 1024px) {
   .contacts h3 {
-    font-size: 30px;
+    font-size: 25px;
   }
 }
 @media (min-width: 1639px) {
