--- a/lib/components/footer/footer.module.scss
+++ b/lib/components/footer/footer.module.scss
@@ -15,18 +15,24 @@
     flex-direction: row;
     justify-content: center;
     align-items: flex-start;
-    padding: 90px 45px;
+    padding: 5% 2%;
+    //padding: 90px 45px;
   }
 
   @include respond-to("xl"){
     max-width: 1900px;
   }
-
 }
+
 .copyrightLogo {
   color: var(--hover-color);
-  font-size: 16px;
+ display: flex;
   cursor: pointer;
+  h4{
+    padding-top: 0.50rem;
+    padding-left: 0.5rem;
+    font-size: 12px;
+  }
 }
 
 .copyrightLogo:hover {
@@ -35,9 +41,8 @@
 }
 
 
-
 .logosWrapper {
-  width: 90%;
+  width: 60%;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -47,7 +52,7 @@
     justify-content: center;
     align-items: flex-start;
     padding: 0 ;
-
+    width: 30%;
 
   }
   @include respond-to("m") {
@@ -60,12 +65,12 @@
 }
 
 .logoCatsWrapper{
-  width: 270px;
+  width: 250px;
   margin-left:3%;
 
   @include respond-to("s") {
   width: 200px;
-  margin-left: 0.5em;
+  margin-left: 0.5rem;
 }
   @include respond-to("m") {
     width: 270px;
@@ -82,42 +87,43 @@
   height: 100%;
 }
 
-.copyright {
-  width: 110%;
+.textFooter{
+  width: 90%;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  padding: 0px;
-  margin-right: 40px;
-  h4 {
-    margin: 0px 0px 30px 0px;
+  padding: 0;
+  margin-right: 1%;
+/*  h4 {
+    //margin: 0px 0px 30px 0px;
     font-size: 18px;
     line-height: 32px;
     color: var(--background);
-  }
+  }*/
   p {
+    font-family: "Poppins",sans-serif;
     font-size: 16px;
     color: var(--background);
   }
   @include respond-to("s") {
-    width: 110%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    padding: 0px;
+    padding: 25px;
     margin-right: 40px;
-    h4 {
-      margin: 0px 0px 30px 0px;
+/*    h4 {
       font-size: 18px;
       line-height: 32px;
-    }
+    }*/
     p {
       font-size: 16px;
+
     }
     @include respond-to("m"){
-      h4 {
-        font-size: 25px;
-
+      margin-right: 42px;
+      p {
+        font-size: 18px;
       }
     }
   }
@@ -126,13 +132,13 @@
 
 
 .contacts {
-  padding: 0px;
+  padding-top: 1.5rem;
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-end;
-  text-align: right;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
   cursor: pointer;
 h3, p{
   color: var(--background);
@@ -156,16 +162,16 @@ h3, p{
   }
 
   @include respond-to("s") {
-    padding: 0px;
-    width: 100%;
+    padding-top: 26px;
+    width: 30%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-end;
     text-align: right;
 
+
     h3 {
-      font-size: 25px;
       text-align: right;
       margin-bottom: 40px;
       line-height: 50px;
@@ -174,7 +180,7 @@ h3, p{
     }
 
     p {
-      font-size: 18px;
+      //font-size: 18px;
       margin-bottom: 5px;
       text-align: right;
       width: 100%;
@@ -183,7 +189,7 @@ h3, p{
 
   @include respond-to("m"){
     h3 {
-      font-size: 30px;
+      font-size: 25px;
     }
   }
   @include respond-to("xl"){
