--- a/lib/components/Sections/HomelessSection/HomelessSection.module.css
+++ b/lib/components/Sections/HomelessSection/HomelessSection.module.css
@@ -117,7 +117,7 @@
   height: 140%;
   position: absolute;
   z-index: 100;
-  background-color: black;
+  background-color: transparent;
   padding: 25px;
 }
 @media (min-width: 767px) {
@@ -130,8 +130,8 @@
 }
 @media (min-width: 1024px) {
   .qrWrapper {
-    width: 40vw;
-    height: 50vh;
+    width: 35vw;
+    height: 60vh;
     top: 20%;
     left: 65%;
     margin-left: -200px;
